# electronic-execution-algos

./: .gitignore  CMakeLists.txt  README.md
include/: AbstractAlgorithmScheduler.h  AlgoConfig.h  Algorithm.h  AlgorithmFactory.h  AlgorithmType.h  AntiGaming.h  AvgLatency.h  Basket.h  BasketDB.h  BasketServer.h  BasketServerStatus.h  BasketStore.h  BasketWave.h  BlockingQueue.h  CountDownLatch.h  Execution.h  ExecutionService.h  ExecutionType.h  FillService.h  IcebergAlgorithm.h  IcebergConfig.h  LiquidityAggregator.h  LiquidityIndicator.h  Logger.h  LotSizing.h  Node.h  Order.h  OrderBook.h  OrderBookManager.h  OrderConfig.h  OrderRouter.h  OrderSide.h  OrderStatus.h  OrderType.h  POVConfig.h  ParticipateAlgorithm.h  ParticipateConfig.h  PricePoint.h  Raptor.h  RingBuffer.h  (+22 more)
src/: AbstractAlgorithmScheduler.cpp  Algorithm.cpp  AlgorithmFactory.cpp  AntiGaming.cpp  AvgLatency.cpp  Basket.cpp  BasketDB.cpp  BasketServer.cpp  BasketStore.cpp  BasketWave.cpp  BlockingQueue.cpp  CountDownLatch.cpp  ExecutionService.cpp  ExecutionService.h  FillService.cpp  IcebergAlgorithm.cpp  Main.cpp  Node.cpp  Order.cpp  OrderBook.cpp  OrderBookManager.cpp  ParticipateAlgorithm.cpp  PricePoint.cpp  Raptor.cpp  RingBuffer.cpp  SerialRouter.cpp  SplayTree.cpp  SprayRouter.cpp  TWAPAlgorithm.cpp  TakeLiquidityManager.cpp  TakeLiquidityManager.h  TimeUtils.cpp  TimedAlgorithm.cpp  VWAPAlgorithm.cpp  VenueManager.cpp  VenueOrderManager.cpp  Wave.cpp
test/: catch.hpp  test.cpp  test.h
